--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,5 @@
-grailsVersion=5.1.10
-grailsGradlePluginVersion=5.1.5
-groovyVersion=3.0.7
-gorm.version=7.2.1
+grailsVersion=2022.0.0-SNAPSHOT
+groovyVersion=3.0.12
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Dfile.encoding=UTF-8 -Xmx1024M
